// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit 1`] = `Array []`;

exports[`Unit 2`] = `
Array [
  Array [
    "action:validate",
    Object {
      "payload": true,
      "type": "action:validate",
    },
  ],
  Array [
    "action:create",
    Object {
      "payload": undefined,
      "type": "action:create",
    },
  ],
  Array [
    "action:run",
    Object {
      "payload": undefined,
      "type": "action:run",
    },
  ],
  Array [
    "action:success",
    Object {
      "payload": undefined,
      "type": "action:success",
    },
  ],
]
`;

exports[`Unit 3`] = `
Array [
  Array [
    "action:validate",
    Object {
      "payload": true,
      "type": "action:validate",
    },
  ],
  Array [
    "action:create",
    Object {
      "payload": undefined,
      "type": "action:create",
    },
  ],
  Array [
    "action:run",
    Object {
      "payload": "Should thrown the Error",
      "type": "action:run",
    },
  ],
  Array [
    "run:error",
    Object {
      "payload": [Error: Should thrown the Error],
      "type": "run:error",
    },
  ],
  Array [
    "action:fails",
    Object {
      "payload": undefined,
      "type": "action:fails",
    },
  ],
]
`;
